Add chat feature

--- a/src/app/room/room.component.html
+++ b/src/app/room/room.component.html
@@ -76,6 +76,7 @@
     </mat-card>
   </section>
 </mat-expansion-panel>
+<app-message></app-message>
 <mat-card>
   <mat-card-title>{{Room.roomData.host.name}}</mat-card-title>
   <mat-card-subtitle>Host</mat-card-subtitle>
